<resources>
    <string name="app_name">AUT2_03 Aplicación Final Android</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="nav_header_title">Listado Coches</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_activity4">Activity4</string>
    <string name="action_activity3">Activity3</string>
    <string name="action_activity2">Activity2</string>
    <string name="acercade">Acerca de</string>


    <string name="menu_home">Coches</string>
    <string name="menu_gallery">Crear coches</string>
    <string name="menu_actualizar">Actualizar coches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>