<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_activity2"
        android:orderInCategory="100"
        android:title="@string/action_activity2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_activity3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/action_activity3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_activity4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/action_activity4"
        app:showAsAction="never" />
    <item
        android:id="@+id/acercade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="100"
        android:title="@string/acercade"
        app:showAsAction="never" />
</menu>