<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_actualizar"
        android:name="com.example.aut2_03aplicacinfinalandroid.ui.actualizar.ActualizarFragment"
        android:label="@string/menu_actualizar" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.aut2_03aplicacinfinalandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.aut2_03aplicacinfinalandroid.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

</navigation>